fixed overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@
   background-color: rgba(0, 0, 0, 0.541);
   border-radius: 15px;
   padding: 1vh;
-  padding-bottom: 2vh;
+  padding-bottom: 1vh;
 }
 
 .cartOverlay button {
